# sword-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
